cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/o3-mini/row_31_update_1_template_20250430_155343.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Production-ready CloudFormation template for an automated deployment pipeline
  for the Etherpad application using AWS CodeDeploy. This template provisions an
  Auto Scaling Group of EC2 instances running Etherpad, fronted by an Application Load Balancer,
  a MySQL RDS instance for storage, S3 bucket for deployment artifacts,
  and integrates with AWS Systems Manager Parameter Store for secure parameters.

Parameters:
  VpcId:
    Description: VPC Id where resources will be deployed
    Type: AWS::EC2::VPC::Id
  SubnetId1:
    Description: First subnet ID for the Auto Scaling Group and ALB
    Type: AWS::EC2::Subnet::Id
  SubnetId2:
    Description: Second subnet ID for the Auto Scaling Group and ALB
    Type: AWS::EC2::Subnet::Id
  KeyName:
    Description: EC2 KeyPair for access to instances
    Type: AWS::EC2::KeyPair::KeyName
  InstanceType:
    Description: EC2 instance type for application servers
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t3.small
      - t3.medium
      - t3.large
  AMIId:
    Description: AMI Id for the instances (must be Amazon Linux 2 based)
    Type: AWS::EC2::Image::Id
  DBName:
    Description: The database name for Etherpad
    Type: String
    Default: EtherpadDB
  DBUser:
    Description: The database admin account username
    Type: String
    Default: admin
  DBPassword:
    Description: The database admin account password
    Type: String
    NoEcho: true
  DBAllocatedStorage:
    Description: Allocated storage (in GB) for the RDS instance
    Type: Number
    Default: 20
  DBInstanceClass:
    Description: RDS instance type
    Type: String
    Default: db.t3.micro
  DBEngineVersion:
    Description: MySQL engine version
    Type: String
    Default: "8.0"
  CodeDeployServiceRoleARN:
    Description: ARN of the service role used for CodeDeploy
    Type: String
  DeploymentBucketName:
    Description: S3 bucket name to store deployment artifacts
    Type: String
    Default: !Sub "etherpad-deploy-artifacts-${AWS::AccountId}-${AWS::Region}"

Resources:
  ArtifactBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref DeploymentBucketName
      AccessControl: Private

  SSMParameterEtherpadConfig:
    Type: AWS::SSM::Parameter
    Properties:
      Name: "/etherpad/config"
      Type: String
      Value: !Sub '{"dbName":"${DBName}","dbUser":"${DBUser}"}'
      Description: "Configuration for Etherpad application stored in Parameter Store"

  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: AllowSSMandCodeDeploy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ssm:GetParameter
                  - ssm:DescribeParameters
                Resource: "*"
              - Effect: Allow
                Action:
                  - codedeploy:RegisterApplicationRevision
                  - codedeploy:GetApplicationRevision
                Resource: "*"
              - Effect: Allow
                Action:
                  - cloudformation:SignalResource
                Resource: "*"
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref EC2InstanceRole

  CodeDeployApplication:
    Type: AWS::CodeDeploy::Application
    Properties:
      ApplicationName: EtherpadApplication
      ComputePlatform: Server

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9001
          ToPort: 9001
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for RDS instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: EtherpadALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref SubnetId1
        - !Ref SubnetId2

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: EtherpadTG
      Port: 9001
      Protocol: HTTP
      VpcId: !Ref VpcId
      HealthCheckEnabled: true
      HealthCheckPath: /
      Matcher:
        HttpCode: "200"

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: EtherpadLaunchTemplate
      LaunchTemplateData:
        ImageId: !Ref AMIId
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyName
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        SecurityGroupIds:
          - !Ref EC2SecurityGroup
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash -xe
            yum update -y
            # Install Node.js
            curl -sL https://rpm.nodesource.com/setup_14.x | bash -
            yum install -y nodejs
            # Install CodeDeploy Agent
            yum install -y ruby wget
            cd /home/ec2-user
            wget https://aws-codedeploy-${AWS::Region}.s3.${AWS::Region}.amazonaws.com/latest/install
            chmod +x ./install
            ./install auto
            # Signal CloudFormation on success
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource AutoScalingGroup --region ${AWS::Region}

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: EtherpadASG
      VPCZoneIdentifier:
        - !Ref SubnetId1
        - !Ref SubnetId2
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      MinSize: 1
      MaxSize: 3
      DesiredCapacity: 1
      TargetGroupARNs:
        - !Ref TargetGroup
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: 1
        MaxBatchSize: 1

  CodeDeployDeploymentGroup:
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName: !Ref CodeDeployApplication
      DeploymentGroupName: EtherpadDeploymentGroup
      ServiceRoleArn: !Ref CodeDeployServiceRoleARN
      DeploymentConfigName: CodeDeployDefault.OneAtATime
      AutoScalingGroups:
        - !Ref AutoScalingGroup
      LoadBalancerInfo:
        TargetGroupInfoList:
          - Name: !Ref TargetGroup

  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: !Ref DBName
      AllocatedStorage: !Ref DBAllocatedStorage
      DBInstanceClass: !Ref DBInstanceClass
      Engine: mysql
      EngineVersion: !Ref DBEngineVersion
      MasterUsername: !Ref DBUser
      MasterUserPassword: !Ref DBPassword
      VPCSecurityGroups:
        - !Ref RDSSecurityGroup
      DBSubnetGroupName: !Ref RDSSubnetGroup
      MultiAZ: false
      PubliclyAccessible: false

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnet group for RDS instance"
      SubnetIds:
        - !Ref SubnetId1
        - !Ref SubnetId2

Outputs:
  LoadBalancerDNS:
    Description: "DNS name of the Application Load Balancer"
    Value: !GetAtt LoadBalancer.DNSName
  RDSEndpoint:
    Description: "Endpoint address of the RDS instance"
    Value: !GetAtt RDSInstance.Endpoint.Address
  DeploymentBucket:
    Description: "S3 Bucket for deployment artifacts"
    Value: !Ref ArtifactBucket
  CodeDeployApplicationName:
    Description: "Name of the CodeDeploy Application"
    Value: !Ref CodeDeployApplication
